4659 - Unhide add adjustments button & fix alignment in file browser dropzone on mobile view (#1827)
* unhide adjustment button

* fix alignment of file browsing on mobile view

--- a/src/banking/components/OpenEntrySecondaryContent.module.css
+++ b/src/banking/components/OpenEntrySecondaryContent.module.css
@@ -35,6 +35,13 @@
 }
 
 /* @FEELIX */
+@media only screen and (max-width: 500px) {
+  .dropzone :global(.file-browser-label-wrapper) {
+    display: unset;
+  }
+}
+
+/* @FEELIX */
 @media only screen and (min-width: 500px) {
   .columns :global(.flx-col) {
     grid-gap: 0.8rem;
